--- a/rpy2-feedstock/recipe/meta.yaml
+++ b/rpy2-feedstock/recipe/meta.yaml
@@ -1,5 +1,5 @@
-{% set version = '2.9.1' %}
-{% set versionu = '2_9_1' %}
+{% set version = '2.9.3' %}
+{% set versionu = '2_9_3' %}
 {% set pfx = 'm2w64-' if win else '' %}
 
 package:
@@ -9,7 +9,7 @@ package:
 source:
   fn: rpy2-{{version}}.tar.gz
   url: https://pypi.io/packages/source/r/rpy2/rpy2-{{ version }}.tar.gz
-  sha256: cca9ede06c96b1f3b326c1b98e8620b5d17a0679a852d22f77e418d2c013e97a
+  sha256: 1b72958e683339ea0c3bd9f73738e9ece2da8da8008a10e2e0c68fc7864e9361
   # Regenerate the patches using the following command:
   # mercurial_program export -r 3066:3072 -o 000%n-%m.patch -g
   patches:
@@ -24,8 +24,6 @@ source:
     - 0008-Win32__Change_R_USER_check_for_HOMEDIR_to_HOMEDRIVE.patch
     - 0009-Win32__Use_get_R_HOME___if_R_HOME_is_not_set_.patch
     - 0010-Win32__Elide-include-R_ext_eventloop_h.patch
-    # This is a fixed version of https://bitbucket.org/rpy2/rpy2/commits/d8a45251e61449b5b6a8e6476f82dcab9c65398f/raw
-    - 0011-Fix-issue-448-properly.patch
 
 build:
   merge_build_host: True
@@ -68,6 +66,7 @@ test:
     - numpy
     - pandas
     - mock
+    - tzlocal
   imports:
     - rpy2
     - rpy2.interactive
