--- a/mro-feedstock/recipe/meta.yaml
+++ b/mro-feedstock/recipe/meta.yaml
@@ -2,6 +2,7 @@
 {% set version = '3.5.0' %}
 {% set rc_version = '3.4.3' %}
 {% set ml_version = '9.3.0' %}
+{% set build_mrclient = False %}
 
 {% set url = 'https://mran.blob.core.windows.net/install/mro/'+version+'/microsoft-r-open-'+version"'.exe' %}  # [win64]
 {% set fn = 'microsoft-r-open-'+version+'.exe' %}  # [win64]
@@ -1213,6 +1214,7 @@ outputs:
         failure time models.
       license_family: LGPL
 
+{% if build_mrclient == True %}
   - name: r-mrclient  # [linux or win]
     version: {{ rc_version }}  # [linux or win]
     script: install-r-mrclient.sh  # [linux or win]
@@ -1353,6 +1355,7 @@ outputs:
       license: Proprietary  # [linux]
       summary: Pre-trained machine learning models for sentiment analysis and image detection  # [linux]
       license_family: Proprietary  # [linux]
+{% endif %}
 
   - name: mro-basics
     version: {{ version }}
